[gd_scene load_steps=34 format=3 uid="uid://cudxxv1ij0nt2"]

[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/enet_manager/enet_server_manager.gd" id="2_0eset"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/server_client_manager/NetworkServerClientManager.gd" id="2_igohy"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/channel_manager/channel_manager.gd" id="3_n2k4d"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/enet_manager/handler/ENetServerStartHandler.gd" id="3_yk8g8"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/channel_manager/ChannelMap.gd" id="4_7df81"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/enet_manager/handler/ENetServerStopHandler.gd" id="4_lpjob"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/packet_manager/packet_manager.gd" id="5_23jpr"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/enet_manager/handler/ENetServerOnPeerConnectedHandler.gd" id="5_olooa"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/enet_manager/handler/ENetServerOnPeerDisconnectedHandler.gd" id="6_1vfhx"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/packet_manager/handler/PacketDispatchHandler.gd" id="6_k6a2e"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/packet_manager/handler/PacketProcessingHandler.gd" id="7_45nmv"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/enet_manager/handler/ENetServerProcessHandler.gd" id="7_h2h6j"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/enet_manager/handler/ENetServerPacketSendHandler.gd" id="8_hpljq"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/packet_manager/handler/PacketCreationHandler.gd" id="8_hs1m5"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/packet_manager/handler/PacketCacheHandler.gd" id="9_cebe6"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/packet_manager/handler/PacketConverterHandler.gd" id="10_13fup"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/manager/packet_manager/handler/PacketValidationHandler.gd" id="11_icdrw"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/network_handler/core/core_heartbeat_handler.gd" id="12_ino61"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/network_handler/core/core_connection_handler.gd" id="13_47jjv"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/network_handler/core/core_disconnection_handler.gd" id="14_wvvyj"]
[ext_resource type="Script" path="res://game/module/player_manager/character_manager/network_handler/char_fetch_handler.gd" id="15_4b8tu"]
[ext_resource type="Script" path="res://game/module/player_manager/character_manager/network_handler/char_select_handler.gd" id="16_5c2ti"]
[ext_resource type="Script" path="res://game/module/player_manager/player_movement_manager/network_handler/movement_player_handler.gd" id="17_xnihq"]
[ext_resource type="Script" path="res://game/module/player_manager/player_movement_manager/network_handler/movement_player_sync_handler.gd" id="18_atgia"]
[ext_resource type="Script" path="res://game/module/world_manager/instance_manager/network_handler/scene_instance_data_handler.gd" id="19_xc5h5"]
[ext_resource type="Script" path="res://game/module/world_manager/trigger_manager/handler/TriggerInstanceChangeHandler.gd" id="20_5spt7"]
[ext_resource type="Script" path="res://game/module/world_manager/trigger_manager/handler/TriggerZoneChangeHandler.gd" id="21_fren4"]
[ext_resource type="Script" path="res://game/module/world_manager/trigger_manager/handler/TriggerRoomChangeHandler.gd" id="22_4yyqk"]
[ext_resource type="Script" path="res://game/module/world_manager/trigger_manager/handler/TriggerEventHandler.gd" id="23_j3ufk"]
[ext_resource type="Script" path="res://network/module/network_game/game_udp/network_handler/user/UserLoginHandler.gd" id="24_5047v"]
[ext_resource type="Script" path="res://game/module/world_manager/trigger_manager/handler/TriggerTrapHandler.gd" id="24_h33fm"]
[ext_resource type="Script" path="res://game/module/world_manager/trigger_manager/handler/TriggerObjectiveHandler.gd" id="25_fj5cl"]
[ext_resource type="Script" path="res://network/module/network_database/database_mongodb_rest/network_handler/DatabaseMongoDBUserTokenHandler.gd" id="25_mysvb"]

[node name="NetworkGameModule" type="Node"]

[node name="Manager" type="Node" parent="."]

[node name="NetworkServerClientManager" type="Node" parent="Manager"]
script = ExtResource("2_igohy")

[node name="NetworkENetServerManager" type="Node" parent="Manager"]
script = ExtResource("2_0eset")

[node name="Handler" type="Node" parent="Manager/NetworkENetServerManager"]

[node name="ENetServerStartHandler" type="Node" parent="Manager/NetworkENetServerManager/Handler"]
script = ExtResource("3_yk8g8")

[node name="ENetServerStopHandler" type="Node" parent="Manager/NetworkENetServerManager/Handler"]
script = ExtResource("4_lpjob")

[node name="ENetServerOnPeerConnectedHandler" type="Node" parent="Manager/NetworkENetServerManager/Handler"]
script = ExtResource("5_olooa")

[node name="ENetServerOnPeerDisconnectedHandler" type="Node" parent="Manager/NetworkENetServerManager/Handler"]
script = ExtResource("6_1vfhx")

[node name="ENetServerProcessHandler" type="Node" parent="Manager/NetworkENetServerManager/Handler"]
script = ExtResource("7_h2h6j")

[node name="ENetServerPacketSendHandler" type="Node" parent="Manager/NetworkENetServerManager/Handler"]
script = ExtResource("8_hpljq")

[node name="NetworkChannelManager" type="Node" parent="Manager"]
script = ExtResource("3_n2k4d")

[node name="Map" type="Node" parent="Manager/NetworkChannelManager"]

[node name="ChannelMap" type="Node" parent="Manager/NetworkChannelManager/Map"]
script = ExtResource("4_7df81")

[node name="Handler" type="Node" parent="Manager/NetworkChannelManager"]

[node name="NetworkPacketManager" type="Node" parent="Manager"]
script = ExtResource("5_23jpr")

[node name="Handler" type="Node" parent="Manager/NetworkPacketManager"]

[node name="PacketDispatchHandler" type="Node" parent="Manager/NetworkPacketManager/Handler"]
script = ExtResource("6_k6a2e")

[node name="PacketProcessingHandler" type="Node" parent="Manager/NetworkPacketManager/Handler"]
script = ExtResource("7_45nmv")

[node name="PacketCreationHandler" type="Node" parent="Manager/NetworkPacketManager/Handler"]
script = ExtResource("8_hs1m5")

[node name="PacketHashHandler" type="Node" parent="Manager/NetworkPacketManager/Handler"]

[node name="PacketCacheHandler" type="Node" parent="Manager/NetworkPacketManager/Handler"]
script = ExtResource("9_cebe6")

[node name="PacketConverterHandler" type="Node" parent="Manager/NetworkPacketManager/Handler"]
script = ExtResource("10_13fup")

[node name="PacketValidationHandler" type="Node" parent="Manager/NetworkPacketManager/Handler"]
script = ExtResource("11_icdrw")

[node name="NetworkHandler" type="Node" parent="."]

[node name="GameCore" type="Node" parent="NetworkHandler"]

[node name="CoreHeartbeatHandler" type="Node" parent="NetworkHandler/GameCore"]
script = ExtResource("12_ino61")

[node name="CoreConnectionHandler" type="Node" parent="NetworkHandler/GameCore"]
script = ExtResource("13_47jjv")

[node name="CoreDisconnectionHandler" type="Node" parent="NetworkHandler/GameCore"]
script = ExtResource("14_wvvyj")

[node name="CorePingHandler" type="Node" parent="NetworkHandler/GameCore"]

[node name="CoreServerStatusHandler" type="Node" parent="NetworkHandler/GameCore"]

[node name="CoreErrorHandler" type="Node" parent="NetworkHandler/GameCore"]

[node name="GameMovement" type="Node" parent="NetworkHandler"]

[node name="MovementPlayerHandler" type="Node" parent="NetworkHandler/GameMovement"]
script = ExtResource("17_xnihq")

[node name="MovementPlayerSyncHandler" type="Node" parent="NetworkHandler/GameMovement"]
script = ExtResource("18_atgia")

[node name="GameInstance" type="Node" parent="NetworkHandler"]

[node name="SceneInstanceDataHandler" type="Node" parent="NetworkHandler/GameInstance"]
script = ExtResource("19_xc5h5")

[node name="GameTrigger" type="Node" parent="NetworkHandler"]

[node name="TriggerEntryHandler" type="Node" parent="NetworkHandler/GameTrigger"]

[node name="TriggerExitHandler" type="Node" parent="NetworkHandler/GameTrigger"]

[node name="TriggerInstanceChangeHandler" type="Node" parent="NetworkHandler/GameTrigger"]
script = ExtResource("20_5spt7")

[node name="TriggerZoneChangeHandler" type="Node" parent="NetworkHandler/GameTrigger"]
script = ExtResource("21_fren4")

[node name="TriggerRoomChangeHandler" type="Node" parent="NetworkHandler/GameTrigger"]
script = ExtResource("22_4yyqk")

[node name="TriggerEventHandler" type="Node" parent="NetworkHandler/GameTrigger"]
script = ExtResource("23_j3ufk")

[node name="TriggerTrapHandler" type="Node" parent="NetworkHandler/GameTrigger"]
script = ExtResource("24_h33fm")

[node name="TriggerObjectiveHandler" type="Node" parent="NetworkHandler/GameTrigger"]
script = ExtResource("25_fj5cl")

[node name="GameUser" type="Node" parent="NetworkHandler"]

[node name="UserLoginHandler" type="Node" parent="NetworkHandler/GameUser"]
script = ExtResource("24_5047v")

[node name="UserTokenHandler" type="Node" parent="NetworkHandler/GameUser"]
script = ExtResource("25_mysvb")

[node name="GameCharacter" type="Node" parent="NetworkHandler"]

[node name="CharacterFetchHandler" type="Node" parent="NetworkHandler/GameCharacter"]
script = ExtResource("15_4b8tu")

[node name="CharacterSelectHandler" type="Node" parent="NetworkHandler/GameCharacter"]
script = ExtResource("16_5c2ti")

[node name="CharacterUpdateHandler" type="Node" parent="NetworkHandler/GameCharacter"]

[node name="Config" type="Node" parent="."]

[node name="Map" type="Node" parent="."]

[node name="Handler" type="Node" parent="."]
